@@ -96,24 +96,30 @@ public class AsistenteUsersViewControllers extends Thread {
 
     private String ahorro() {
         List<CuentaDto> todasLasCuentas = asistenteControllers.obtenerCuenta();
-        List<CuentaDto> cuentasUsers = todasLasCuentas.stream()
+        List<CuentaDto> cuentasDelUsuario = todasLasCuentas.stream()
                 .filter(cuenta -> usuario.getCedula().equals(cuenta.clienteId()))
-                .toList();
-        double totalIncome = cuentasUsers.stream()
+                .collect(Collectors.toList());
+        double saldoTotal = cuentasDelUsuario.stream()
                 .mapToDouble(CuentaDto::saldo)
                 .sum();
-        double totalSavings = totalIncome * 0.2;
-
+        double totalSavings = saldoTotal * 0.2;
         return  usuario.getNombreCompleto() + ", tu ahorro sugerido es del 20% de tus ingresos totales, lo que equivale a $"
                 + String.format("%.2f", totalSavings);
     }
 
     private String gastos() {
-        List<TransaccionDto> transaccionesUsuario = asistenteControllers.obtenerTrasaccion().stream()
-                .filter(transaccion ->
-                        transaccion.cuentaOrigen() != null &&
-                                transaccion.cuentaOrigen().getClienteId().equals(usuario.getCedula()))
+        List<TransaccionDto> todasLasTransacciones = asistenteControllers.obtenerTrasaccion();
+        List<CuentaDto> cuentasUsuario = asistenteControllers.obtenerCuenta().stream()
+                .filter(cuenta -> usuario.getCedula().equals(cuenta.clienteId()))
                 .toList();
+        List<TransaccionDto> transaccionesUsuario = todasLasTransacciones.stream()
+                .filter(transaccion -> cuentasUsuario.stream()
+                        .anyMatch(cuenta ->
+                                (transaccion.cuentaOrigen() != null && transaccion.cuentaOrigen().getNumeCuenta().equals(cuenta.numeCuenta())) ||
+                                        (transaccion.cuentaDestino() != null && transaccion.cuentaDestino().getNumeCuenta().equals(cuenta.numeCuenta()))
+                        )
+                )
+                .collect(Collectors.toList());
         if (transaccionesUsuario.isEmpty()) {
             return usuario.getNombreCompleto() + ", no tienes gastos registrados. ¡Buen manejo de tus ingresos!";
         }
@@ -131,8 +137,9 @@ public class AsistenteUsersViewControllers extends Thread {
 
     private String inversiones() {
         List<CuentaDto> cuentasUsuario = asistenteControllers.obtenerCuenta().stream()
-                .filter(cuenta -> cuenta.clienteId().equals(usuario.getCedula()))
+                .filter(cuenta -> usuario.getCedula().equals(cuenta.clienteId()))
                 .toList();
+
         double totalBalance = cuentasUsuario.stream()
                 .mapToDouble(CuentaDto::saldo)
                 .sum();
@@ -146,7 +153,7 @@ public class AsistenteUsersViewControllers extends Thread {
     }
     private String consultarSaldo() {
         List<CuentaDto> cuentasUsuario = asistenteControllers.obtenerCuenta().stream()
-                .filter(cuenta -> cuenta.clienteId().equals(usuario.getCedula()))
+                .filter(cuenta -> usuario.getCedula().equals(cuenta.clienteId()))
                 .toList();
         double saldoTotal = cuentasUsuario.stream()
                 .mapToDouble(CuentaDto::saldo)
@@ -156,12 +163,12 @@ public class AsistenteUsersViewControllers extends Thread {
     }
     private String consultarTransferenciasRecibidas() {
         List<CuentaDto> cuentasUsuario = asistenteControllers.obtenerCuenta().stream()
-                .filter(cuenta -> cuenta.clienteId().equals(usuario.getCedula()))
+                .filter(cuenta -> usuario.getCedula().equals(cuenta.clienteId()))
                 .toList();
         List<Transaccion> transferenciasRecibidas = modelFactoryService.getUrWallet().getListaTransaccion().stream()
                 .filter(transaccion -> cuentasUsuario.stream()
                         .anyMatch(cuenta -> cuenta.numeCuenta().equals(transaccion.getCuentaDestino().getNumeCuenta())))
-                .toList();
+                .collect(Collectors.toList());
 
         if (transferenciasRecibidas.isEmpty()) {
             return usuario.getNombreCompleto() + ", no se encontraron transferencias recibidas.";
